# backend

./: .env.example  .gitignore  Cargo.toml  README.md  data_analyze.ipynb
data/: arb_sepolia_1155.csv  arb_sepolia_721.csv  base_sepolia_1155.csv  base_sepolia_721.csv  linea_goerli_1155.csv  linea_goerli_721.csv  op_sepolia_1155.csv  op_sepolia_721.csv  scroll_sepolia_1155.csv  scroll_sepolia_721.csv  zkevm_sepolia_1155.csv  zkevm_sepolia_721.csv
src/: abi.rs  call_function.rs  client.rs  main.rs  wallet.rs
