[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
# ethers = { version = "2.0", features = ["optimism"] }
# ethers = "2.0.14"
# 官方的库里最新版本没有 Polygon ZkEVM Cardano 测试网，因此自己 fork
ethers = { git = "https://github.com/kongtaoxing/ethers-rs"}
eyre = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
